CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
SET( CMAKE_COLOR_MAKEFILE ON )
SET( CMAKE_VERBOSE_MAKEFILE OFF )
SET( CMAKE_INCLUDE_CURRENT_DIR TRUE )
SET( CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS TRUE )

IF( NOT CMAKE_BUILD_TYPE )
  SET( CMAKE_BUILD_TYPE Debug ) 
  SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDEBUG" )
ENDIF( )

PROJECT( MATH )

# Versioning.
SET( ${PROJECT_NAME}_MAJOR_VERSION 0 ) 
SET( ${PROJECT_NAME}_MINOR_VERSION 1 ) 
SET( ${PROJECT_NAME}_PATCH_LEVEL 0 )

OPTION( BUILD_TESTS "Set to ON to build test programs" OFF )

ADD_DEFINITIONS( "-Wall" )
ADD_SUBDIRECTORY( src )

# Build test programs.
IF( BUILD_TESTS MATCHES ON )
  ADD_SUBDIRECTORY( test )
ENDIF( )

MESSAGE( STATUS "--------------------------------------------------" )
MESSAGE( STATUS "VERSION        = ${${PROJECT_NAME}_MAJOR_VERSION}.${${PROJECT_NAME}_MINOR_VERSION}.${${PROJECT_NAME}_PATCH_LEVEL}" )
MESSAGE( STATUS "BUILD_TESTS    = ${BUILD_TESTS}" )
MESSAGE( STATUS "--------------------------------------------------" )
